# daraja_mpesa_ecosystem_django

./: .gitignore  manage.py  mpesa_callback_logs.txt  pay.py  pyproject.toml  requirements.txt
mpesa_app/: admin.py  models.py  serializers.py  urls.py  views.py
mpesa_app/migrations/: 0001_initial.py  0002_remove_payment_status_remove_payment_transaction_id.py  0003_payment_result_code_payment_result_description_and_more.py
mpesa_app/templates/: transactions.html
mpesa_ecosystem/: asgi.py  settings.py  urls.py  wsgi.py
