[tool.poetry]
name = "mpesa-ecosystem"
version = "0.1.0"
description = ""
authors = ["Koech Hezekiah <hezekiahkoech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
django-rest-framework = "^0.1.0"
requests = "^2.32.3"
gunicorn = "^23.0.0"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
